--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div><!-- LOGO CONTAINER -->
 
-            <div class="content">
+            <div class="logo-content">
                 <h2>Powering the Partial Monetization Industry</h2>
                 <br>
                 <p>
@@ -165,7 +165,7 @@
                         <div class="culture-box">
                             <h2>Values</h2>
 
-                            <div><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
+                            <div class="culture-icon"><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
 
                             <div class="text-left">
                                 <ul>
@@ -182,7 +182,7 @@
                         <div class="culture-box">
                             <h2>Incentive Program</h2>
 
-                            <div><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
+                            <div class="culture-icon"><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
 
                             <h4>Our agents are offered many perks at FSA:</h4>
 
@@ -201,14 +201,13 @@
                         <div class="culture-box">
                             <h2>Celebrations</h2>
 
-                            <div><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
+                            <div class="culture-icon"><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
 
                             <p>Everything is worth celebrating at FSA! We enjoy having birthday celebrations, BBQs,
                                 holiday parties, and potlucks!</p>
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </div>
@@ -556,7 +555,7 @@
                 <div class="col-sm-4">
                     <div class="contact-info">
                         <div class="contact-info-section"><h3>General Inquiries</h3>
-                            <div><a href="mailto:hr@fsaventures.com">hr@fsaventures.com</a></div>
+                            <div><a class="a-medium" href="mailto:hr@fsaventures.com">HR@FSAVentures.com</a></div>
                         </div>
                         <div class="contact-info-section">
                             <h3>Office</h3>
@@ -564,7 +563,10 @@
                                 310-1682 W 7th Ave
                                 Vancouver, BC V6J 4S6, Canada
                             </p>
-                            <h3>Get Directions</h3>
+                            <p>
+                                <a class="a-medium" target="_blank" rel="nofollow" href="http://maps.google.com/maps?saddr=&amp;daddr=1682+West+7th+Ave+Vancouver%2C+BC%2C+V6J+ 4S6&amp;hl=en&amp;oq=Vancouver+BC&amp;mra=ls&amp;t=m&amp;z=13">Get Directions</a>
+                                <span><img src="images/icon/google_map.png" width="50px"/></span>
+                            </p>
                         </div>
                         <div class="contact-info-section center">
                             <img class="img-responsive center" src="images/logo-small.png">
@@ -605,6 +607,10 @@
         </div>
 
     </div><!-- CONTACTS -->
+
+    <div class="footer">
+        <div class="footer-info">&copy 2017 First Solution Advantage | <a href="cookies.html">Cookies Notice</a></div>
+    </div>
 
 </div>
 
