Removed verbiage, added icons, fixed quotes

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </div><!-- LOGO CONTAINER -->
 
             <div class="logo-content">
-                <h2>Powering the Partial Monetization Industry</h2>
+                <h1>Powering the Partial Monetization Industry</h1>
                 <br>
-                <p>
+                <h3 class="thin-font">
                     FSA is an outbound call center that monetizes partial leads for Advertisers. FSA is a solution for
                     advertisers, built by advertisers with a plethora of knowledge and experience in the online
                     marketing
@@ -80,7 +80,7 @@
                     FSA prides itself on industry leading knowledge, impeccable customer service, and reduced charge
                     back
                     rates.
-                </p>
+                </h3>
             </div>
 
         </div>
@@ -106,39 +106,11 @@
 
             <div id="rotating-quotes" class="carousel slide" data-ride="carousel">
 
-                <div>
-                    <p> From the moment you walk into our office, you can tell that there is a unique, outgoing culture
-                        that suits people of all ages. Each person associated with our company is valued as a family
-                        member as we refer to ourselves as a team rather than a group of individuals. We are an open
-                        working environment with transparency and employee freedom. We look forward to expanding our
-                        diverse society with an even larger array of enthusiasts that love working together.
-                    </p>
-                    <p>
-                        FSA is a stress free environment to work in where you can make friends and even bring your
-                        friends to join the team. From the moment you walk into our office you can tell that there is a
-                        unique, outgoing culture that suits to people of all ages. Each person associated with our
-                        company is valued as a family member as we refer to ourselves as a team rather than a group of
-                        individuals. At FSA we focus on and encourage growth as a group starting from our fantastic
-                        agents, to our helpful team leads, to our motivational management. We are always determined to
-                        keep each other’s best interest at heart. We are an open working environment with transparency
-                        and employee freedom. Our core value is to help each other grow and fulfill each and every one
-                        of our goals with the help of our peers. You can always rely on your teammates with open
-                        communication platforms readily available to reach out at any time. We encourage each of our
-                        members to have a voice and a meaningful impact on the development of our company. FSA is a
-                        reassuring place to spend your days with the ultimate welcoming and friendly environment in
-                        place. We are proud of our company’s family oriented culture and will always continue to grow
-                        with these values in place. We look forward to expanding our diverse society with an even larger
-                        array of enthusiasts that love working together in a team oriented setting.
-                    </p>
-
-
-                </div>
-
-
                 <div class="rotating-quotes carousel-inner">
                     <div class="item active">
                         <h3>"A place with great comradery. A company where you can learn, grow, and most importantly,
                             gain the knowledge to become a proficient sales executive."</h3>
+                        <h3 class="quote-writer">-Danny</h3>
                     </div>
 
                     <div class="item">
@@ -146,15 +118,18 @@
                             and
                             ambitious, FSA has fully provided me the vehicle to accomplish my personal career and
                             financial related goals."</h3>
+                        <h3 class="quote-writer">-Davis</h3>
                     </div>
 
                     <div class="item">
                         <h3>"Fervent atmosphere and professional mannerism in full display. Young vibrant company at its
                             prime."</h3>
+                        <h3 class="quote-writer">-Llord</h3>
                     </div>
 
                     <div class="item">
                         <h3>"Each person associated with our company is valued as a family member."</h3>
+                        <h3 class="quote-writer">-Emily</h3>
                     </div>
                 </div>
             </div>
@@ -165,7 +140,7 @@
                         <div class="culture-box">
                             <h2>Values</h2>
 
-                            <div class="culture-icon"><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
+                            <div class="culture-icon"><img class="img-circle culture-icon-img" src="images/icon/plant.png"></div>
 
                             <div class="text-left">
                                 <ul>
@@ -182,7 +157,7 @@
                         <div class="culture-box">
                             <h2>Incentive Program</h2>
 
-                            <div class="culture-icon"><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
+                            <div class="culture-icon"><img class="img-circle culture-icon-img" src="images/icon/trophy.png"></div>
 
                             <h4>Our agents are offered many perks at FSA:</h4>
 
@@ -201,7 +176,7 @@
                         <div class="culture-box">
                             <h2>Celebrations</h2>
 
-                            <div class="culture-icon"><img class="img-circle" src="http://via.placeholder.com/150x150"></div>
+                            <div class="culture-icon"><img class="img-circle culture-icon-img" src="images/icon/cake.png"></div>
 
                             <p>Everything is worth celebrating at FSA! We enjoy having birthday celebrations, BBQs,
                                 holiday parties, and potlucks!</p>
@@ -393,7 +368,7 @@
             <div class="width-80">
                 <div class="section-label"><h1>Solutions & Services</h1></div>
 
-                <h3>
+                <h3 class="thin-font">
                     FSA helps businesses re-create client interactions by converting partials into long term customers.
                     FSA
                     enhances your personal brand, recovers lost revenue, and creates an exceptional experience with each
@@ -508,7 +483,7 @@
         <div class="section-inner">
             <div class="section-label"><h1>Careers</h1></div>
 
-            <h2>We pride ourselves on growing and maintaining a unified, rewarding, and exceptional workplace.</h2>
+            <h2 class="thin-font">We pride ourselves on growing and maintaining a unified, rewarding, and exceptional workplace.</h2>
 
             <div class="jobs">
                 <div class="row">
@@ -551,56 +526,62 @@
 
             <div class="section-label"><h1>Contact Us</h1></div>
 
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="contact-info">
-                        <div class="contact-info-section"><h3>General Inquiries</h3>
-                            <div><a class="a-medium" href="mailto:hr@fsaventures.com">HR@FSAVentures.com</a></div>
-                        </div>
-                        <div class="contact-info-section">
-                            <h3>Office</h3>
-                            <p>
-                                310-1682 W 7th Ave
-                                Vancouver, BC V6J 4S6, Canada
-                            </p>
-                            <p>
-                                <a class="a-medium" target="_blank" rel="nofollow" href="http://maps.google.com/maps?saddr=&amp;daddr=1682+West+7th+Ave+Vancouver%2C+BC%2C+V6J+ 4S6&amp;hl=en&amp;oq=Vancouver+BC&amp;mra=ls&amp;t=m&amp;z=13">Get Directions</a>
-                                <span><img src="images/icon/google_map.png" width="50px"/></span>
-                            </p>
-                        </div>
-                        <div class="contact-info-section center">
-                            <img class="img-responsive center" src="images/logo-small.png">
+            <div class="section-inner-contacts">
+
+
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="contact-info">
+                            <div class="contact-info-section"><h3>General Inquiries</h3>
+                                <div><a class="a-medium" href="mailto:hr@fsaventures.com">HR@FSAVentures.com</a></div>
+                            </div>
+                            <div class="contact-info-section">
+                                <h3>Office</h3>
+                                <p>
+                                    310-1682 W 7th Ave
+                                    Vancouver, BC V6J 4S6, Canada
+                                </p>
+                                <p>
+                                    <a class="a-medium" target="_blank" rel="nofollow"
+                                       href="http://maps.google.com/maps?saddr=&amp;daddr=1682+West+7th+Ave+Vancouver%2C+BC%2C+V6J+ 4S6&amp;hl=en&amp;oq=Vancouver+BC&amp;mra=ls&amp;t=m&amp;z=13">Get
+                                        Directions</a>
+                                    <span><img src="images/icon/google_map.png" width="50px"/></span>
+                                </p>
+                            </div>
+                            <div class="contact-info-section center">
+                                <img class="img-responsive center" src="images/logo-small.png">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-8">
-                    <div class="contact-form text-left">
-                        <form id="contact-form">
-                            <div class="form-group">
-                                <div><label for="name">Name*</label></div>
-                                <input class="form-control input-lg" id="name" type="text" required/>
-                            </div>
-                            <div class="form-group">
-                                <div><label for="email">Email*</label></div>
-                                <input class="form-control input-lg" id="email" type="email" required/>
-                            </div>
-                            <div class="form-group">
-                                <div><label for="phone">Phone*</label></div>
-                                <input class="form-control input-lg" id="phone" type="text" required/>
-                            </div>
-                            <div class="form-group">
-                                <div><label for="subject">Subject*</label></div>
-                                <input class="form-control input-lg" id="subject" type="text" required/>
-                            </div>
-                            <div class="form-group">
-                                <div><label for="message">Message*</label></div>
-                                <textarea class="form-control" id="message" rows="10" maxlength="1000"
-                                          required></textarea>
-                            </div>
-                            <div class="form-group text-right">
-                                <input type="submit" class="btn btn-primary" value="Submit"/>
-                            </div>
-                        </form>
+                    <div class="col-sm-8">
+                        <div class="contact-form text-left">
+                            <form id="contact-form">
+                                <div class="form-group">
+                                    <div><label for="name">Name*</label></div>
+                                    <input class="form-control input-lg" id="name" type="text" required/>
+                                </div>
+                                <div class="form-group">
+                                    <div><label for="email">Email*</label></div>
+                                    <input class="form-control input-lg" id="email" type="email" required/>
+                                </div>
+                                <div class="form-group">
+                                    <div><label for="phone">Phone*</label></div>
+                                    <input class="form-control input-lg" id="phone" type="text" required/>
+                                </div>
+                                <div class="form-group">
+                                    <div><label for="subject">Subject*</label></div>
+                                    <input class="form-control input-lg" id="subject" type="text" required/>
+                                </div>
+                                <div class="form-group">
+                                    <div><label for="message">Message*</label></div>
+                                    <textarea class="form-control" id="message" rows="10" maxlength="1000"
+                                              required></textarea>
+                                </div>
+                                <div class="form-group text-right">
+                                    <input type="submit" class="btn btn-primary" value="Submit"/>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
