--- a/cookies.html
+++ b/cookies.html
@@ -2,6 +2,13 @@
 <!DOCTYPE>
 <html>
 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+<style>
+    body{
+        font-family: 'Open Sans', sans-serif;
+    }
+</style>
+
 <head>
     <title>COOKIES NOTICE</title>
 </head>
