--- a/index.html
+++ b/index.html
@@ -481,11 +481,21 @@
                             <button class="btn btn-primary job-button">Canada</button>
                             <div class="job-list">
                                 <ul>
-                                    <li class="job-item"><a class="job-link" href="https://ca.indeed.com/viewjob?jk=f8d7a0dde575b11e&tk=1bov7efhqb85j8f7&from=company">Accounting Clerk</a></li>
-                                    <li class="job-item"><a class="job-link" href="https://ca.indeed.com/viewjob?jk=d093cf4a5412bdf3&tk=1bov78r41b85j97k&from=company">Customer Service Representative (Chilliwack, B.C)</a></li>
-                                    <li class="job-item"><a class="job-link" href="https://ca.indeed.com/viewjob?jk=fa0e0e9a799e7a45&tk=1bov78r41b85j97k&from=company">Customer Service Representative (Abbotsford, B.C)</a></li>
-                                    <li class="job-item"><a class="job-link" href="https://ca.indeed.com/viewjob?jk=f5e7ed34626d4fc6&tk=1bov78r41b85j97k&from=company">Customer Service Representative (Richmond, B.C)</a></li>
-                                    <li class="job-item"><a class="job-link" href="https://ca.indeed.com/cmp/FSA-Ventures/jobs/Sales-Agent-7e0e09c52d3a209f?sjdu=vQIlM60yK_PwYat7ToXhkwjr5xWTCGyOLaEjMWYJWB5F7gDAKNGvDl-nfev4IwxucT0TpZhZj1LAzfUdWXoazy6tDHC8W0ertDUNoY4WDYJF9N4D7Gy3BflVb_Ze9xS7">Sales Agent</a></li>
+                                    <li class="job-item"><a class="job-link"
+                                                            href="https://ca.indeed.com/viewjob?jk=f8d7a0dde575b11e&tk=1bov7efhqb85j8f7&from=company">Accounting
+                                        Clerk</a></li>
+                                    <li class="job-item"><a class="job-link"
+                                                            href="https://ca.indeed.com/viewjob?jk=d093cf4a5412bdf3&tk=1bov78r41b85j97k&from=company">Customer
+                                        Service Representative (Chilliwack, B.C)</a></li>
+                                    <li class="job-item"><a class="job-link"
+                                                            href="https://ca.indeed.com/viewjob?jk=fa0e0e9a799e7a45&tk=1bov78r41b85j97k&from=company">Customer
+                                        Service Representative (Abbotsford, B.C)</a></li>
+                                    <li class="job-item"><a class="job-link"
+                                                            href="https://ca.indeed.com/viewjob?jk=f5e7ed34626d4fc6&tk=1bov78r41b85j97k&from=company">Customer
+                                        Service Representative (Richmond, B.C)</a></li>
+                                    <li class="job-item"><a class="job-link"
+                                                            href="https://ca.indeed.com/cmp/FSA-Ventures/jobs/Sales-Agent-7e0e09c52d3a209f?sjdu=vQIlM60yK_PwYat7ToXhkwjr5xWTCGyOLaEjMWYJWB5F7gDAKNGvDl-nfev4IwxucT0TpZhZj1LAzfUdWXoazy6tDHC8W0ertDUNoY4WDYJF9N4D7Gy3BflVb_Ze9xS7">Sales
+                                        Agent</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -535,7 +545,12 @@
                                 <h3 class="thin-font">Office</h3>
                                 <h4>
                                     310-1682 W 7th Ave
-                                    Vancouver, BC V6J 4S6, Canada
+                                    <br>
+                                    Vancouver, BC
+                                    <br>
+                                    V6J 4S6
+                                    <br>
+                                    Canada
                                 </h4>
                                 <p>
                                     <a class="a-medium" target="_blank" rel="nofollow"
@@ -580,6 +595,20 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="social-buttons">
+                    <a href="https://www.facebook.com/FSAVentures/">
+                        <img class="social-button" src="/images/icon/social/facebook.png"/>
+                    </a>
+                    <a href="https://www.instagram.com/fsaventures/">
+                        <img class="social-button" src="/images/icon/social/instagram.png"/>
+                    </a>
+                    <a href="https://www.linkedin.com/company/10584756/">
+                        <img class="social-button" src="/images/icon/social/linkedin.png"/>
+                    </a>
+                </div>
+
             </div>
         </div>
 
