--- a/index.html
+++ b/index.html
@@ -481,19 +481,19 @@
                             <button class="btn btn-primary job-button">Canada</button>
                             <div class="job-list">
                                 <ul>
-                                    <li class="job-item"><a target="_blank" class="job-link"
+                                    <li class="job-item"><a target="_blank" target="" class="job-link"
                                                             href="https://ca.indeed.com/viewjob?jk=f8d7a0dde575b11e&tk=1bov7efhqb85j8f7&from=company">Accounting
                                         Clerk</a></li>
-                                    <li class="job-item"><a target="_blank" class="job-link"
+                                    <li class="job-item"><a target="_blank" target="" class="job-link"
                                                             href="https://ca.indeed.com/viewjob?jk=d093cf4a5412bdf3&tk=1bov78r41b85j97k&from=company">Customer
                                         Service Representative (Chilliwack, B.C)</a></li>
-                                    <li class="job-item"><a target="_blank" class="job-link"
+                                    <li class="job-item"><a target="_blank" target="" class="job-link"
                                                             href="https://ca.indeed.com/viewjob?jk=fa0e0e9a799e7a45&tk=1bov78r41b85j97k&from=company">Customer
                                         Service Representative (Abbotsford, B.C)</a></li>
-                                    <li class="job-item"><a target="_blank" class="job-link"
+                                    <li class="job-item"><a target="_blank" target="" class="job-link"
                                                             href="https://ca.indeed.com/viewjob?jk=f5e7ed34626d4fc6&tk=1bov78r41b85j97k&from=company">Customer
                                         Service Representative (Richmond, B.C)</a></li>
-                                    <li class="job-item"><a target="_blank" class="job-link"
+                                    <li class="job-item"><a target="_blank" target="" class="job-link"
                                                             href="https://ca.indeed.com/cmp/FSA-Ventures/jobs/Sales-Agent-7e0e09c52d3a209f?sjdu=vQIlM60yK_PwYat7ToXhkwjr5xWTCGyOLaEjMWYJWB5F7gDAKNGvDl-nfev4IwxucT0TpZhZj1LAzfUdWXoazy6tDHC8W0ertDUNoY4WDYJF9N4D7Gy3BflVb_Ze9xS7">Sales
                                         Agent</a></li>
                                 </ul>
@@ -615,7 +615,7 @@
     </div><!-- CONTACTS -->
 
     <div class="footer">
-        <div class="footer-info">&copy 2017 First Solution Advantage | <a href="cookies.html">Cookies Notice</a></div>
+        <div class="footer-info">&copy 2017 First Solution Advantage | <a target="_blank" href="cookies.html">Cookies Notice</a></div>
     </div>
 
 </div>
