Removed First solutions advantage text from logo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="logo-container">
                 <div class="logo">
                     <img class="logo-img img-responsive" src="images/logo.png">
-                    FIRST SOLUTION ADVANTAGE
+                    <!--FIRST SOLUTION ADVANTAGE-->
                 </div>
             </div><!-- LOGO CONTAINER -->
 
