added phone validation

--- a/index.html
+++ b/index.html
@@ -332,10 +332,7 @@
                                     <h4>Quality Assurance Manager</h4>
                                     <hr>
                                     <h5>
-                                        Grant has been at FSA for a little over a year. He is in charge of the quality
-                                        team and oversees quality associates. His team monitors calls to ensure all
-                                        standards are met to provide client satisfaction. A very reliable individual
-                                        that's open to take on different tasks when needed
+                                        Grant is the head of the QA department and is responsible for overseeing the quality team in monitoring calls. He ensures that all industry standards are met in providing client satisfaction. As a dependable and reliable individual, he has provided positive attribution to the company with meeting their milestones.
                                     </h5>
                                 </div>
                             </div>
@@ -560,13 +557,13 @@
                                 </p>
                             </div>
                             <div class="contact-info-section fsa-logo center">
-                                <img class="img-responsive center" src="images/logo-small.png">
+                                <img class="img-responsive center" src="images/logo.png">
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-8">
                         <div class="contact-form text-left">
-                            <form id="contact-form">
+                            <form id="contact-form" name="contact-form">
                                 <div class="form-group">
                                     <div><label for="name">Name*</label></div>
                                     <input class="form-control input-lg" id="name" type="text" required/>
@@ -577,7 +574,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div><label for="phone">Phone*</label></div>
-                                    <input class="form-control input-lg" id="phone" type="text" required/>
+                                    <input class="form-control input-lg" id="phone" type="tel" pattern="^\d{10}$" maxlength="10" required/>
                                 </div>
                                 <div class="form-group">
                                     <div><label for="subject">Subject*</label></div>
